# digital_marketplace_algorand

projects/digital_marketplace/: .algokit.toml  README.md  pyproject.toml
projects/digital_marketplace/.algokit/: .copier-answers.yml
projects/digital_marketplace/smart_contracts/artifacts/digital_marketplace/: DigitalMarketplace.approval.teal  DigitalMarketplace.arc32.json  digital_marketplace_client.py
projects/digital_marketplace/smart_contracts/digital_marketplace/: contract.py
projects/frontend/: package-lock.json  package.json
projects/frontend/.algokit/: .copier-answers.yml
projects/frontend/src/: App.tsx  Home.tsx  methods.ts
projects/frontend/src/components/: Account.tsx  MethodCall.tsx  Transact.tsx
projects/frontend/src/contracts/: DigitalMarketplace.ts
