[tool.poetry]
name = "digital_marketplace"
version = "0.1.0"
description = "Algorand smart contracts"
authors = ["Falcao Zane Vijay <112317470+falcaozane@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
algokit-utils = "^2.3.0"
python-dotenv = "^1.0.0"
algorand-python = "^1.0.0"
algorand-python-testing = "^0.2.1"

[tool.poetry.group.dev.dependencies]
algokit-client-generator = "^1.1.3"
puyapy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

